--- a/index.html
+++ b/index.html
@@ -6,9 +6,106 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Macbook</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
 </head>
 
 <body>
+    <header>
+
+    </header>
+    <main>
+        <section class="mt-10">
+            <div class="grid grid-cols-2 gap-4 ">
+                <div>
+                    <img src="images/mac.png" alt="" class="w-3/4 ml-16">
+                </div>
+                <!-- info -->
+                <div class="mr-14">
+                    <h1 class="text-5xl font-semibold">Customize your Blue 24-inch iMac with Apple M1 chip.</h1>
+
+                    <p class="text-xl my-10">Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency
+                        cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB SSD storage Two
+                        Thunderbolt/USB 4 ports Magic Mouse Magic Keyboard - US English
+                    </p>
+                    <!-- configaretion -->
+                    <div>
+                        <h4 class="text-2xl font-semibold pb-3">Memory</h4>
+                        <button
+                            class="text-xl bg-white border  border-indigo-900 rounded px-6 py-3 hover:bg-gray-100 focus:border-green-300">8GB
+                            unified
+                            memory</button>
+
+                        <button
+                            class="text-xl bg-white border  border-indigo-900 rounded px-6 py-3 hover:bg-gray-100 focus:border-green-300">16GB
+                            unified
+                            memory</button>
+                    </div>
+
+                    <div class="my-10">
+                        <h4 class="text-2xl font-semibold pb-3">Storage</h4>
+
+                        <button
+                            class="text-xl bg-white border  border-indigo-900 rounded px-5 py-3 hover:bg-gray-100 focus:border-green-300">256GB
+                            SSD storage</button>
+
+                        <button
+                            class="text-xl bg-white border  border-indigo-900 rounded px-5 py-3 hover:bg-gray-100 focus:border-green-300">512GB
+                            SSD storage</button>
+
+                        <button
+                            class="text-xl bg-white border  border-indigo-900 rounded px-5 py-3 hover:bg-gray-100 focus:border-green-300 my-3">1TB
+                            SSD storage</button>
+
+                    </div>
+                    <!-- delivery info -->
+                    <div class="my-10">
+                        <h4 class="text-2xl font-semibold pb-3">Choose your delivery option</h4>
+
+                        <button
+                            class="text-xl bg-white border  border-indigo-900 rounded px-5 py-3 hover:bg-gray-100 focus:border-green-300">Friday
+                            Aug 25, FREE Prime Delivery</button>
+
+                        <button
+                            class="text-xl bg-white border  border-indigo-900 rounded px-5 py-3 hover:bg-gray-100 focus:border-green-300 my-3">Monday
+                            Aug 21, FREE Prime Delivery $20</button>
+                    </div>
+                    <!-- calculation -->
+                    <div class="my-10 w-2/3">
+                        <h4 class="text-2xl font-bold py-3 flex justify-between border-b-2">Best Price
+                            <span>$1299</span>
+                        </h4>
+                        <hr>
+                        <h4 class="text-2xl font-bold py-3 flex justify-between border-b-2">Extra Memory Cost
+                            <span>$0</span>
+                        </h4>
+                        <hr>
+                        <h4 class="text-2xl font-bold py-3 flex justify-between border-b-2">Extra Stotage Cost
+                            <span>$0</span>
+                        </h4>
+                        <hr>
+                        <h4 class="text-2xl font-bold py-3 flex justify-between border-b-2 border-black	">Delivery
+                            Charge
+                            <span>$0</span>
+                        </h4>
+                        <hr>
+                        <h4 class="text-2xl font-bold py-3 flex justify-between border-b-2">Total Price
+                            <span>$1299</span>
+                        </h4>
+                        <!-- promo code  -->
+                        <h4 class="text-2xl font-semibold pb-3 pt-6">Add Promo Code</h4>
+                        <input type="text" class="border rounded py-3 px-6">
+                        <button
+                            class="bg-red-500 rounded pb-3 pt-1 px-3 text-white text-2xl font-semibold">Apply</button>
+                    </div>
+
+                </div>
+
+            </div>
+            <hr>
+            <h2 class="text-6xl text-center font-bold my-5">Total: $1299</h2>
+        </section>
+    </main>
 
 </body>
 
